--- a/.github/workflows/main_webapp-dev-newsletter-gwc-saschao.yml
+++ b/.github/workflows/main_webapp-dev-newsletter-gwc-saschao.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Use Bun
-        uses: oven-sh/setup-bun@v
+        uses: oven-sh/setup-bun@v2
       - name: bun install, and start
         run: |
           bun install
